2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/effects/videoscale/admin_gtk.py:
	  Remove unused import.
	* flumotion/worker/checks/video.py:
	* flumotion/component/converters/video/video.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	  Remove unused code.
	* flumotion/worker/checks/audio.py:
	  Remove unused exception.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/netutils.py:
	  bytes is a builtin.  Replace it.
	* flumotion/twisted/defer.py:
	* flumotion/component/producers/playlist/playlistparser.py:
	* flumotion/ui/wizard.py:
	  next is a builtin.  Replace it.
	* flumotion/component/bouncers/component.py:
	* flumotion/component/producers/videotest/wizard_gtk.py:
	  id is a builtin.  Replace it.
	* flumotion/component/consumers/disker/admin_gtk.py:
	  iter is a builtin.  Replace it.
	* flumotion/component/consumers/disker/disker.py:
	  file is a builtin.  Replace it.
	* flumotion/ui/trayicon.py:
	  quit is a builtin.  Replace it.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/twisted/pb.py:
	* flumotion/common/format.py:
	* flumotion/common/componentui.py:
	* flumotion/common/i18n.py:
	* flumotion/common/medium.py:
	* flumotion/component/misc/httpserver/admin_gtk.py:
	* flumotion/component/producers/webcam/webcam.py:
	* flumotion/component/producers/looper/looper.py:
	* flumotion/component/producers/videotest/videotest.py:
	* flumotion/manager/admin.py:
	  'format' is a builtin.  Replace it.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/signals.py:
	* flumotion/component/effects/deinterlace/admin_gtk.py:
	* flumotion/manager/component.py:
	* flumotion/job/main.py:
	  Remove unused imports.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/converters/overlay/overlay.py:
	  Pychecker caught two mistakes, globals that are in fact self
	  attributes.
